{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player1",
            "id": "ccd31660-c1fe-4e7f-99a5-75f6237da7ef",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "9c16c557-318d-40c1-88fa-392bd0f955d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "cf1d8c8a-ecee-4ab8-a0ab-d31de74fedad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9d4636cc-d413-4abf-8fa8-7c3a34f50c99",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Clamp(min=-3,max=3)",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40371d2d-b579-4c2b-9cbc-939eeff93072",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Clamp(min=-3,max=3)",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "860dbb97-ec19-4fd5-a1ee-9685481dd475",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "509b874c-9651-4096-b665-c80ceba98b48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "4421de8c-112a-413c-921d-7a24f67dc37e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "20060183-fafd-48b3-8ba1-a8e7a15e35c0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77cc3df1-a6f2-43a6-9e58-54928ba62fe5",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}